<resources>
    <string name="app_name">Blogmania</string>
    <string name="TitleName">Welcome to</string>
    <string name="Login">Login</string>
    <string name="ButtonNewAccount">Need new account?</string>
    <string name="Password_hint">Password...</string>
    <string name="Login_hint">Type your login here...</string>
    <string name="Create_account">Create new account</string>
    <string name="Create_button">Create</string>
    <string name="Action_search_text">Search</string>
    <string name="Action_settings">Settings</string>
    <string name="Action_logout">Logout</string>
    <string name="title_help">Type your title here</string>
    <string name="discription_hint">Type a short description of your post</string>
    <string name="add_image_btn">Add image</string>
    <string name="add_remove_image_btn">Remove image</string>
    <string name="add_text_hint">Type your post here..</string>
    <string name="add_confirm_text">Publish post</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_notif_text">Notification</string>
    <string name="nav_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
