<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_blue_light"
    tools:context=".CreateAccount">

    <EditText
        android:id="@+id/CreateLoginEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/background_holo_light"
        android:ems="10"
        android:hint="@string/Login_hint"
        android:inputType="textPersonName"
        android:textColor="@color/background_holo_light"
        android:textColorHint="@color/dim_foreground_disabled_holo_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_toolbar" />

    <EditText
        android:id="@+id/CreatePasswordEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Password_hint"
        android:backgroundTint="@color/background_holo_light"
        android:textColor="@color/background_holo_light"
        android:textColorHint="@color/dim_foreground_disabled_holo_dark"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateLoginEdit" />

    <Button
        android:id="@+id/CreateLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/holo_red_light"
        android:text="@string/Create_button"
        android:textColor="@color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatePasswordEdit" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_blue_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>